--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </form>
         <h3>Пс, пс</h3>
         <p>
-           <i> Тут є приховане біле посилання!
+           <i> Тут є приховане біле послання!
             <br>
             Знайди його)</i>
             <br>
