--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="section" id="starter">
                 <a><img src="foto.jpg" width="250" /> </a>
                 <p>
-                    рада вас бачити <br>
+                    Рада вас бачити <br>
                     на своїй першій<br>
                      <i>(вп'яте оновленій)</i>
                      <br> вебсторінці
@@ -60,14 +60,14 @@
             </div>
             <div class="section" id="contacts">
                 <a href="https://t.me/odna_buka" target="_blank"> Telegram </a>
-               <br>
+                <br /><br />
                 <a
                   href="https://instagram.com/mr_duglass_?igshid=YmMyMTA2M2Y="
                   target="_blank"
                 >
                   Instagram
                 </a>
-                <br>
+                <br /><br />
                 <a href="https://t.me/odna_buka" target="_blank"> +380666852691 </a>
             </div>
                
