--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="section" id="starter">
                 <a><img src="foto.jpg" width="250" /> </a>
                 <p>
-                    Рада вас бачити <br>
+                    рада вас бачити <br>
                     на своїй першій<br>
                      <i>(вп'яте оновленій)</i>
                      <br> вебсторінці
