--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta
       name="viewport"
       content="width=device-width,
-        initial-scale=1.0"/>
+        initial-scale=1.0"
+/>
     <title>Анна Шендрик</title>
     <link rel="icon" type="image/png" sizes="32x32" href="romb.png" />
     <link rel="stylesheet" href="css/style.css" />
@@ -69,6 +70,8 @@
         </div>
      
     </div>
+    </div>
+      
 
 
     <div class="section_3">
