--- a/index1.html
+++ b/index1.html
@@ -57,34 +57,35 @@
         <div class="skills_item">
           <img class="skills_icon" src="images/i1.png" alt="">
           <div class="skills_title">PHOTOSHOP</div>
-          <div class="skills_text">Обробка фотографій, плакати, типо графія, тощо</div>
+          <div class="skills_text">Обробка фотографій, плакати, типографія, тощо</div>
         </div>
         <div class="skills_item">
-          <img class="skills_icon" src="images/i1.png" alt="">
-          <div class="skills_title">PHOTOSHOP</div>
-          <div class="skills_text">Обробка фотографій, плакати, типо графія, тощо</div>
+          <img class="skills_icon" src="images/i4.png" alt="">
+          <div class="skills_title">ADOBE XD</div>
+          <div class="skills_text">Прототипування інтерфейсів сайтів, сторінок, додатків, тощо</div>
         </div>
         <div class="skills_item">
-          <img class="skills_icon" src="images/i1.png" alt="">
-          <div class="skills_title">PHOTOSHOP</div>
-          <div class="skills_text">Обробка фотографій, плакати, типо графія, тощо</div>
+          <img class="skills_icon" src="images/i5.png" alt="">
+          <div class="skills_title">FONTLAB</div>
+          <div class="skills_text">Розробка індивідуальних дизайнерських шрифтів</div>
         </div>
     </div>
     <div class="skills_2">
         <div class="skills_item_2">
-            <img class="skills_icon_2" src="images/i1.png" alt="">
-            <div class="skills_title_2">PHOTOSHOP</div>
-            <div class="skills_text_2">Обробка фотографій, плакати, типо графія, тощо</div>
+            <img class="skills_icon_2" src="images/i2.png" alt="">
+            <div class="skills_title_2">ILLUSTRATOR</div>
+            <div class="skills_text_2">Лого, айдентика, упаковка, ілюстрації, тощо
+            </div>
           </div>
           <div class="skills_item_2">
-            <img class="skills_icon_2" src="images/i1.png" alt="">
-            <div class="skills_title_2">PHOTOSHOP</div>
-            <div class="skills_text_2">Обробка фотографій, плакати, типо графія, тощо</div>
+            <img class="skills_icon_2" src="images/i3.png" alt="">
+            <div class="skills_title_2">INDESIGN</div>
+            <div class="skills_text_2">Верстка книжок, плакатів, буклетів, катологів, тощо</div>
           </div>
           <div class="skills_item_2">
-            <img class="skills_icon_2" src="images/i1.png" alt="">
-            <div class="skills_title_2">PHOTOSHOP</div>
-            <div class="skills_text_2">Обробка фотографій, плакати, типо графія, тощо</div>
+            <img class="skills_icon_2" src="images/i6.png" alt="">
+            <div class="skills_title_2">VISUAL STUDIO CODE</div>
+            <div class="skills_text_2">Cтворення, редагування, запуск вебзастосунків</div>
           </div>
     </div>
     </div>
