--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="logo">SHENDRYK</div>
       <ul class="menu">
         <li>
-          <a href="#me">ПРО МЕНЕ</a>
+          <a href="#about">ПРО МЕНЕ</a>
         </li>
         <li>
           <a href="#skills">НАВИЧКИ</a>
@@ -48,7 +48,22 @@
       </div>
     </div>
 
-    <div class="section_2">
+    <div class="section_1" id="about">
+      <div class="container_02">
+        <div class="about_inner">
+          <div class="about_img"> <img  class="imge" src="images/me.jpg" alt="" /></div>
+          <div class="about_content">
+            <h2 class="about_title">ПРО МЕНЕ</h2>
+            <h3 class="about_bigtitle">ХТО Я</h3>
+            <div class="about_text">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ad consequuntur totam reiciendis nisi fugiat nostrum minima iusto dolores quos veritatis inventore nobis quasi, nam voluptas soluta repellat accusamus eveniet!</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ad consequuntur totam reiciendis nisi fugiat nostrum minima iusto dolores quos veritatis inventore nobis quasi, nam voluptas soluta repellat accusamus eveniet!</p></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section_2" id="skills">
       <div class="container_03">
         <h2 class="section_title_">Навички</h2>
       </div>
@@ -101,8 +116,8 @@
       </div>
     </div>
 
-    <div class="section_3">
-      <div class="container_02">
+    <div class="section_3" id="portfolio">
+      <div class="container_04">
         <h2 class="section_title">Портфоліо</h2>
       </div>
 
