--- a/index.html
+++ b/index.html
@@ -167,5 +167,14 @@
         </div>
       </div>
     </div>
+    <!--<div class="no"><a href="https://github.com/gittik3/gittik3.github.io" target="blank"><svg version="1.1" id="Шар_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+ <style type="text/css">
+   .st0{stroke:#000000;stroke-width:1.2813;stroke-miterlimit:10;}
+ </style>
+ <circle class="st0" cx="51.3" cy="48.3" r="38"/>
+ </svg></div></a>-->
+   
+    <script src="script.js"></script>
   </body>
 </html>
