--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Анна Шендрик</title>
     <link rel="icon" type="image/png" sizes="32x32" href="romb.png" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/menu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,6 +20,7 @@
     />
   </head>
   <body>
+
     <div class="navbar">
       <div class="logo">SHENDRYK</div>
       <ul class="menu">
@@ -36,6 +38,11 @@
           <a href="#contacts">ЗВ'ЯЗОК</a>
         </li>
       </ul>
+      <!--<div class="hamburger open">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>-->
     </div>
 
     <div class="intro">
@@ -51,13 +58,26 @@
     <div class="section_1" id="about">
       <div class="container_02">
         <div class="about_inner">
-          <div class="about_img"> <img  class="imge" src="images/me.jpg" alt="" /></div>
+          <div class="about_img">
+            <img class="imge" src="images/me.jpg" alt="" />
+          </div>
           <div class="about_content">
             <h2 class="about_title">ПРО МЕНЕ</h2>
             <h3 class="about_bigtitle">ХТО Я</h3>
             <div class="about_text">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ad consequuntur totam reiciendis nisi fugiat nostrum minima iusto dolores quos veritatis inventore nobis quasi, nam voluptas soluta repellat accusamus eveniet!</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ad consequuntur totam reiciendis nisi fugiat nostrum minima iusto dolores quos veritatis inventore nobis quasi, nam voluptas soluta repellat accusamus eveniet!</p></div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam
+                ad consequuntur totam reiciendis nisi fugiat nostrum minima
+                iusto dolores quos veritatis inventore nobis quasi, nam voluptas
+                soluta repellat accusamus eveniet!
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam
+                ad consequuntur totam reiciendis nisi fugiat nostrum minima
+                iusto dolores quos veritatis inventore nobis quasi, nam voluptas
+                soluta repellat accusamus eveniet!
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -174,7 +194,7 @@
  </style>
  <circle class="st0" cx="51.3" cy="48.3" r="38"/>
  </svg></div></a>-->
-   
-    <script src="script.js"></script>
+
+    <script src="js/mobilemenu.js"></script>
   </body>
 </html>
