--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         initial-scale=1.0"
     />
     <title>Анна Шендрик</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="romb.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/romb.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,6 +52,8 @@
         </div>
       </div>
     </div>
+
+    <!--about-->
 
     <div class="section_1" id="about">
       <div class="container_02">
@@ -271,7 +273,7 @@
         </div>
       </div><!--contacts-->
       <div class="container_05">
-        <h3 class="section_text_4">ВІДКРИТА ДО СПІВПРАЦІ)</h3>
+        <h3 class="section_text_4">ВІДКРИТА ДО СПІВПРАЦІ :)</h3>
       </div>
 </div>
 
