--- a/index.html
+++ b/index.html
@@ -148,46 +148,46 @@
       <div class="portfolio">
         <div class="portfolio_item">
           <div class="portfolio_img">
-            <img src="images/06.png" alt="" />
+            <img src="images/01.png" alt="" />
           </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
+          <div class="img_text">БУКЛЕТ</div>
         </div>
 
         <div class="portfolio_item">
           <div class="portfolio_img">
-            <img src="images/06.png" alt="" />
+            <img src="images/02.png" alt="" />
           </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
+          <div class="img_text">ІЛЮСТРАЦІЯ</div>
         </div>
 
         <div class="portfolio_item">
           <div class="portfolio_img">
-            <img src="images/06.png" alt="" />
+            <img src="images/03.png" alt="" />
           </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
+          <div class="img_text">ВЕРСТКА КНИГИ</div>
         </div>
       </div>
 
       <div class="portfolio">
         <div class="portfolio_item">
           <div class="portfolio_img">
-            <img src="images/06.png" alt="" />
+            <img src="images/04.png" alt="" />
           </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
+          <div class="img_text">КОМПОЗИЦІЯ</div>
+        </div>
+
+        <div class="portfolio_item">
+          <div class="portfolio_img">
+            <img src="images/05.png" alt="" />
+          </div>
+          <div class="img_text">РАПОРТ</div>
         </div>
 
         <div class="portfolio_item">
           <div class="portfolio_img">
             <img src="images/06.png" alt="" />
           </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
-        </div>
-
-        <div class="portfolio_item">
-          <div class="portfolio_img">
-            <img src="images/06.png" alt="" />
-          </div>
-          <div class="img_text">НАЗВА РОБОТИ</div>
+          <div class="img_text">ФОТОГРАФІЯ</div>
         </div>
       </div>
     </div>
