--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <h2 class="section_title_">Навички</h2>
       </div>
 
-      <div class="skills">ж        <div class="skills_item">
+      <div class="skills">
+              <div class="skills_item">
           <div> <img class="skills_icon" src="images/i1.png" alt="" /></div>
          <div><div class="skills_title">PHOTOSHOP</div>
           <div class="skills_text">
